--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             <nav class="w-full fixed top-0 z-30 bg-white">
                 <div class="container mx-auto py-5 flex justify-between items-center">
                     <div class="flex items-center gap-3">
-                        <img class="w-14" src="/images/logo.svg" alt="">
+                        <img class="w-14 pl-5" src="/images/logo.svg" alt="">
                         <span class="hidden md:block text-2xl font-bold text-indigo-900">elikofi.com</span>
                     </div>
                     <ul class="hidden md:flex space-x-4 text-indigo-500 font-bold text-sm uppercase">
@@ -34,8 +34,7 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <img class="hidden md:block w-6 cursor-pointer" src="/images/moon.svg" alt="">
-                    <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20">
+                    <div id="hamburger" class="space-y-1 pr-5 md:hidden cursor-pointer z-20">
                         <div class="w-6 h-0.5 bg-black"></div>
                         <div class="w-6 h-0.5 bg-black"></div>
                         <div class="w-6 h-0.5 bg-black"></div>
@@ -85,15 +84,15 @@
             </div>
         </div>
         <!--About me section-->
-        <div class="container mx-auto flex flex-col items-center pt-5 md:px-8 md:flex md:flex-row h-screen">
+        <div id="about" class="container mx-auto flex flex-col items-center pt-5 md:px-8 md:flex md:flex-row h-screen">
             <!--Left side-->
             <img class="w-64 md:w-96" src="/images/about.svg" alt="">
             
             <!--Right side-->
             <div class="flex flex-col justify-center pl-10 pr-10 gap-4 md:pl-20 md:pr-0 ">
-                <h2 id="about" class="text-indigo-900 font-bold text-2xl md:text-4xl lg:text-6xl pt-10 text-center md:text-left md:pt-0 animate-bounce" >ABOUT ME</h2>
+                <h2 class="text-indigo-900 font-bold text-2xl md:text-4xl lg:text-6xl pt-10 text-center md:text-left md:pt-0 animate-bounce" >ABOUT ME</h2>
                 <h1 class="text-2xl text-indigo-500 mb-4 text-center md:text-3xl lg:text-5xl md:text-left">A Software Developer</h1>
-                <p class="font-thin text-justify text-l md:text-2xl lg:text-3xl">Writing “Hello World” for the first time felt like a dream I never thought would coome true. Ever since, it has become a passion that only gets more exciting as the weeks go by. I design and build software, both frontend and backend.</p>
+                <p class="font-thin text-justify text-l md:text-xl lg:text-3xl">Writing “Hello World” for the first time felt like a dream I never thought would come true. Ever since, it has become a passion that only gets more exciting as the weeks go by. I design and build software to meet the required standards. I am a self-taught developer, and a true enthusiast of the backend, however, I'm also comfortable with the frontend. </p>
             </div>
         </div>
         <!--Operations section-->
@@ -138,7 +137,7 @@
                         <p>✹ Temperature Converter Application</p>
                         <p>✹ Phonebook Application</p>
                         <p>✹ E-Levy calculator, GPA calculator & Math Calculator</p>
-                        <p>✹ Console C# games(number guessing game, pet name guesser</p>
+                        <p>✹ Console C# games</p>
                     </div>
                     <div class="hidden md:block md:flex-1 md:p-5 md:rounded-md md:bg-white md:drop-shadow-md md:hover:drop-shadow-lg md:text-right">
                         <h1 class="text-2xl text-indigo-900 animate-bounce">Stack</h1>
@@ -171,7 +170,7 @@
             <div class="container mx-auto py-5 flex flex-col gap-5 md:flex-row justify-between items-center">
                 <div class="flex items-center gap-3">
                     <img class="w-14" src="/images/logo.svg" alt="">
-                    <span class="hidden md:block text-2xl font-bold text-indigo-900">Eli.inc</span>
+                    <span class="hidden md:block text-2xl font-bold text-indigo-900">elikofi.com</span>
                 </div>
                 <span class="text-white">&copy; 2022. Designed with ❤️ by Eli</span>
                 <ul id="contact" class="flex gap-3">
