--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="/Images/logo2.svg" type="image/x-icon">
     <link rel="stylesheet" href="output.css">
     <title>Eli Kofi</title>
+    <!-- <script src="/app.js"></script> -->
+
 </head>
 
 <body>
@@ -210,13 +212,22 @@
             </ul>
         </div>
     </footer>
+    <script>
+        const hamburger = document.querySelector("#hamburger")
+        const menu = document.querySelector("#menu")
 
+        hamburger.addEventListener("click", () => {
+            menu.classList.toggle("hidden")
+            hamburger.classList.toggle("bg-white")
+        })
+    </script>
 
-
-
-
-    <script src="/app.js"></script>
     <script src="/autotyping.js"></script>
+
+
+
+
+
 </body>
 
 </html>
