--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Images/logo2.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo2.svg" type="image/x-icon">
     <link rel="stylesheet" href="output.css">
     <title>Eli Kofi</title>
     <!-- <script src="/app.js"></script> -->
@@ -25,6 +25,7 @@
                     <li class="hover:text-indigo-900">
                         <a href="#home">Home</a>
                     </li>
+
                     <li class="hover:text-indigo-900">
                         <a href="#about">About</a>
                     </li>
