--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
-                <div id="hamburger" class="space-y-1 pr-5 active:pr-5 md:hidden cursor-pointer z-20">
+                <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20">
                     <div class="w-6 h-0.5 bg-black"></div>
                     <div class="w-6 h-0.5 bg-black"></div>
                     <div class="w-6 h-0.5 bg-black"></div>
