Fixed main icon

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <nav class="w-full fixed top-0 z-30 bg-white">
             <div class="container mx-auto py-5 flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <img class="w-14 pl-5" src="/images/logo.svg" alt="">
+                    <img class="w-14" src="/images/logo.svg" alt="">
                     <span class="hidden md:block text-2xl font-bold text-indigo-900">elikofi.com</span>
                 </div>
                 <ul class="hidden md:flex space-x-4 text-indigo-500 font-bold text-sm uppercase">
