--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <div class="container mx-auto py-5 flex justify-between items-center">
                 <div class="flex items-center gap-3">
                     <img class="w-14" src="/images/logo.svg" alt="">
-                    <span class="hidden md:block text-2xl font-bold text-indigo-900">elikofi.com</span>
+                    <span class="hidden md:block text-2xl font-bold text-indigo-900">elikofi</span>
                 </div>
                 <ul class="hidden md:flex space-x-4 text-indigo-500 font-bold text-sm uppercase">
                     <li class="hover:text-indigo-900">
@@ -197,7 +197,7 @@
         <div class="container mx-auto py-5 flex flex-col gap-5 md:flex-row justify-between items-center">
             <div class="flex items-center gap-3">
                 <img class="w-14" src="/images/logo.svg" alt="">
-                <span class="hidden md:block text-2xl font-bold text-indigo-900">elikofi.com</span>
+                <span class="hidden md:block text-2xl font-bold text-indigo-900">elikofi</span>
             </div>
             <span class="text-white">&copy; 2022. Designed with ❤️ by Eli</span>
             <ul id="contact" class="flex gap-3">
