--- a/src/index.html
+++ b/src/index.html
@@ -213,6 +213,8 @@
             </ul>
         </div>
     </footer>
+    <!--Javascript part-->
+    
     <script>
         const hamburger = document.querySelector("#hamburger")
         const menu = document.querySelector("#menu")
